added padding and background color to footer

--- a/index.html
+++ b/index.html
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <header>
         <title>Page Title</title>
         <link rel="stylesheet" href="css/style.css">
-    </head>
+    </header>
     <nav>
-        
+
         <div>
+
 
         </div>
         
     </nav>
 <body>
+<section>
 
-<h1>STUDENT BIO </h1>
-<h2>MY NAME IS:MATTHEW AYRTON</h2>
+</section>
+<article>
+
+</article>
+<aside>
+
+</aside>
+
+ 
+<h1>Matthew Ayrton</h1>
+<h2>About me</h2>
 
 <p>I'm Just doing my Job.</p>
 
@@ -24,6 +35,6 @@
     <li>Github: noneya</li>
     <li>Portfolio: it is a secret to everyone</li>
   </ul>
+  <footer></footer>
 </body>
-<footer></footer>
 </html>
