--- a/index.html
+++ b/index.html
@@ -1,33 +1,27 @@
 <!DOCTYPE html>
 <html>
-    <header>
-        <title>Page Title</title>
+    <head>
+        <title>About Me</title>
         <link rel="stylesheet" href="css/style.css">
-    </header>
-    <nav>
-
-        <div>
-
-
-        </div>
-        
-    </nav>
+    </head>
 <body>
-<section>
+    <header>
+        <a href="index.html" id="logo">Matthew Ayrton </a>
+        <navv>
+            <a href="index.html">About</a>
+            <a href="porfolio.html"> Portfolio</a>
+            <a href="contact.html">Contact</a>
 
-</section>
-<article>
+        </navv>
 
-</article>
-<aside>
 
-</aside>
-
- 
+    </header>
 <h1>Matthew Ayrton</h1>
 <h2>About me</h2>
 
-<p>I'm Just doing my Job.</p>
+<p>I'm a new web designer, and am learning the ability to work with Html & CSS. I will continue to learn other porgrams such as JAVA Script, PHP, Bootstrap etc. 
+
+</p>
 
 <h3>Contact Info</h3>
 <ul>
@@ -35,6 +29,6 @@
     <li>Github: noneya</li>
     <li>Portfolio: it is a secret to everyone</li>
   </ul>
-  <footer></footer>
+  <footer>copyright</footer>
 </body>
 </html>
