--- a/index.html
+++ b/index.html
@@ -3,19 +3,28 @@
     <head>
         <title>About Me</title>
         <link rel="stylesheet" href="css/style.css">
-    </head>
+</head>
 <body>
-    <header>
+    <header id="masthead">
+    <div class="container">
         <a href="index.html" id="logo">Matthew Ayrton </a>
-        <navv>
+            <nav>
             <a href="index.html">About</a>
             <a href="porfolio.html"> Portfolio</a>
             <a href="contact.html">Contact</a>
-
-        </navv>
-
-
+            </nav>
+        </div>
     </header>
+
+    <section> class=>"main-container">
+        <h1> About Me</h1>
+        
+        <img class="spotlight" alt="Image may contain: Matthew Ayrton, standing, beard and outdoor" aria-busy="false" src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-9/58883148_10217593690541369_6204968346639663104_n.jpg?_nc_cat=109&amp;_nc_oc=AQl96oxntHot1spDBpVEGp9lZUCjQJpJSWxIFgVgUvd73Onjge3n_ooxxij03CNlWuA&amp;_nc_ht=scontent-sjc3-1.xx&amp;oh=cc9e7dfe3a182e852e84913ac7194e38&amp;oe=5DDA03FA" style="width: 250px; height: 300px;">
+    
+    </section>
+
+   
+
 <h1>Matthew Ayrton</h1>
 <h2>About me</h2>
 
