--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>About Me</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="assests/css/style.css">
 </head>
 <body>
     <header id="masthead">
@@ -10,7 +10,7 @@
         <a href="index.html" id="logo">Matthew Ayrton </a>
             <nav>
             <a href="index.html">About</a>
-            <a href="porfolio.html"> Portfolio</a>
+            <a href="porfolio.html">Portfolio</a>
             <a href="contact.html">Contact</a>
             </nav>
         </div>
@@ -18,7 +18,7 @@
 
     <div id="main-container" class="container">
         <section class="main-container">
-        <h1> Contact</h1>
+        <h1>Contact</h1>
 
         <form id="contact-form">
             <u1>
@@ -45,10 +45,8 @@
             </u1>
             <input type="submit" name="submit">
         </form>
+    </div>
 
-
-        
-        </div>
     </section>
     
   <footer>
