--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title>About Me</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="assests/css/reset.css">style.css">
+        <link rel="stylesheet" type="text/css" href="assests/css/style.css">
 </head>
 <body>
     <header id="masthead">
