--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <head>
+ <head>
         <title>About Me</title>
-        <link rel="stylesheet" type="text/css" href="assests/css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+
 <body>
     <header id="masthead">
     <div class="container">
@@ -18,6 +19,7 @@
 
     <div id="main-container" class="container">
         <section class="main-container">
+            
         <h1>Contact</h1>
 
         <form id="contact-form">
