--- a/portfolio.html
+++ b/portfolio.html
@@ -2,8 +2,7 @@
 <html>
     <head>
         <title>About Me</title>
-        <link rel="stylesheet" type="text/css" href="assests/css/reset.css">style.css">
-        <link rel="stylesheet" type="text/css" href="assests/css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
     <header id="masthead">
@@ -11,7 +10,7 @@
         <a href="index.html" id="logo">Matthew Ayrton </a>
             <nav>
             <a href="index.html">About</a>
-            <a href="porfolio.html"> Portfolio</a>
+            <a href="porfolio.html">Portfolio</a>
             <a href="contact.html">Contact</a>
             </nav>
         </div>
@@ -19,7 +18,7 @@
 
     <div id="main-container" class="container">
         <section class="main-section">
-        <h1> Portfolio</h1>
+        <h1>Portfolio</h1>
         
         <div class="work">
                 <img class="irc_mut" width="150" height="175" style="margin-top: 0px; margin-bottom: 0px;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOpfzjGCfz0nVqnBehL49E-GdXZdKGGyELTcLiTWyXRapZ86jG" alt="Related image">
