--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
         <a href="index.html" id="logo">Matthew Ayrton </a>
             <nav>
             <a href="index.html">About</a>
-            <a href="porfolio.html">Portfolio</a>
+            <a href="portfolio.html">Portfolio</a>
             <a href="contact.html">Contact</a>
             </nav>
         </div>
@@ -19,7 +19,7 @@
 
     <div id="main-container" class="container">
         <section class="main-container">
-            
+
         <h1>Contact</h1>
 
         <form id="contact-form">
