--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
         <a href="index.html" id="logo">Matthew Ayrton </a>
             <nav>
             <a href="index.html">About</a>
-            <a href="porfolio.html">Portfolio</a>
+            <a href="portfolio.html">Portfolio</a>
             <a href="contact.html">Contact</a>
             </nav>
         </div>
