--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
     </header>
 
     <div id="main-container" class="container">
-        <section class="main-container">
+        <section class="main-section">
 
         <h1>Contact</h1>
 
