--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>About Me</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/style2.css">
 </head>
 <body>
     <header id="masthead">
@@ -22,7 +23,7 @@
         
         <img class="spotlight" alt="Image may contain: Matthew Ayrton, standing, beard and outdoor" aria-busy="false" src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-9/58883148_10217593690541369_6204968346639663104_n.jpg?_nc_cat=109&amp;_nc_oc=AQl96oxntHot1spDBpVEGp9lZUCjQJpJSWxIFgVgUvd73Onjge3n_ooxxij03CNlWuA&amp;_nc_ht=scontent-sjc3-1.xx&amp;oh=cc9e7dfe3a182e852e84913ac7194e38&amp;oe=5DDA03FA" style="width: 250px; height: 300px;">
         <p>I'm a new web designer, and am learning the ability 
-        to work with Html & CSS. I will continue to learn other 
+        to work with HTML & CSS. I will continue to learn other 
         porgrams such as JAVA Script, PHP, Bootstrap etc. </p>
 
         <p>I have lived in Utah my whole life, and currently live in 
